Bug 39500 - EDITTING - Auto fill with fill handle for dates differs from numbers behavior.
Summary: EDITTING - Auto fill with fill handle for dates differs from numbers behavior.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-23 18:45 UTC by Nigel Atkinson
Modified: 2012-04-14 16:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sheet showing auto fill results (7.98 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-07-23 18:45 UTC, Nigel Atkinson
Details
Sample Document, see Comment 1 (68.22 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-07-24 02:39 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nigel Atkinson 2011-07-23 18:45:06 UTC
Created attachment 49454 [details]
Sheet showing auto fill results

When entering for example a column of month names you can enter, say 'January', and use the autofill feature to generate 'February', 'March', etc just like you can with numbers.

However unlike with numbers entering a month name in two consecutive cells, selecting both, and using the autofill does not adjust the increment.  For example entering 'July' twice in a column one directly above the other and using autofill still increments the names. Doing so with numbers, entering say '7' twice, then autofill gives a column of '7's.

Also entering '1st' and autofilling works as expected giving '2nd', '3rd', '4th', etc, however '1st Quarter' yields '2st Quarter', '3st Quarter' etc.

To be clear by 'autofill' I mean selecting a cell or a row/column of cells and dragging the 'handle' either left or down.

I've tested the out on the latest Libre Office for Mac, however I've noticed this on Linux with whichever version of OpenOffice that Ubuntu 10.4 had.
Comment 1 Rainer Bielefeld Retired 2011-07-24 02:38:57 UTC
[Reproducible] with "LibreOffice 3.4.1 RC2 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:202)]" 

Please see my result in attached sample.
LibO3.3.3 Portable, 3.4.2RC2. Master show the same behavior, also OOo 3.3.1
In OOo 3.4 for this case the behavior is consequent. 

I believe a really consequent solution should continue numerical trends also for Month names and Day names, means
Jan -  March  => autofill => June - Aug
So IMHO OOo 3.4-dev does it better, but not in a perfect way.

Modified Version to first LibO Version due to my results


@Kohei:
Please feel free to reassign if it’s not your area or if provided information is not sufficient.
Comment 2 Rainer Bielefeld Retired 2011-07-24 02:39:31 UTC
Created attachment 49464 [details]
Sample Document, see Comment 1
Comment 3 Jeffrey 2011-07-24 20:46:29 UTC
Reproduced on LibreOffice 3.4  340m1(Build:103) for OpenSuse Linux.
Comment 4 Björn Michaelsen 2011-12-23 13:26:43 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 5 Markus Mohrhard 2012-04-14 16:02:44 UTC
Fixed the problem with same entry and still incrementing. 1st Quarter, 2nd Quarter, ... can be added by you into Tools->Options->LibreOffice Calc->Sort.
Comment 6 Not Assigned 2012-04-14 16:29:59 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5af699cf62b2313980add377a777c49dc1e7ae2a

don't deduce increment from multiple equal list entries, fdo#39500