don't deduce increment from multiple equal list entries, fdo#39500